# hallucination-graduation-thesis

./: .gitignore  CODE_GUIDE.md  HISTORY.md  README.md  evaluation.md  pyproject.toml  thesis_current_reanalysis_report.md  thesis_evaluation_report.md  thesis_final_followup_analysis.md  thesis_fresh_reader_reanalysis_report.md  thesis_latest_reanalysis_report.md  thesis_newest_reanalysis_report.md  thesis_re_evaluation_report.md
experiments/: CODE_GUIDE.md  OVERVIEW.md  PIPELINE.md  README.md  RESEARCH_PLAN.md  __init__.py
experiments/adapters/: __init__.py  corpus_counts.py  corpus_features.py  correctness_dataset.py  energy_features.py  entity_extractor_quco.py  entity_extractor_regex.py  entity_extractor_spacy.py  free_sample_diagnostics.py  hf_datasets.py  hf_datasets_single_candidate.py  model_generation.py  ngram_coverage_features.py  placeholders.py  qa_bridge_features.py  semantic_entropy_features.py
experiments/application/: __init__.py  architecture_validation.py  fusion.py  generation_correctness.py  generation_level_eval.py  labeling.py  pipeline.py  robustness.py  thesis_evidence.py  type_analysis.py
experiments/configs/: datasets.yaml  datasets_se.yaml  formulas.yaml  fusion.yaml  generation.yaml  generation_se_gemma.yaml  generation_se_qwen.yaml  generation_se_qwen_long.yaml  literature.yaml
experiments/domain/: __init__.py  features.py  labels.py  manifests.py  metrics.py  records.py
experiments/literature/: formula_notes.md  literature_manifest.json
experiments/manifests/: upstream_artifacts_manifest.json  upstream_branch_status.json
experiments/ports/: __init__.py  artifact_store.py  corpus_counts.py  corpus_stats.py  dataset_loader.py  evaluator.py  (+3 more)
thesis/: STYLE.md  TERMINOLOGY.md  figures_tikz.tex  main.md  main.tex  results_macros.tex  thesis_evidence_table.tex
(+97 files in other folders)
