[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hallucination-graduation-thesis-experiments"
version = "0.1.0"
description = "UV-managed experiment environment for the Corpus-Grounded Selective Fusion Detector"
readme = "experiments/README.md"
requires-python = ">=3.10,<3.14"
dependencies = []

[dependency-groups]
generation = [
  "datasets>=3.0.0",
  "pyarrow>=17.0.0",
  "safetensors>=0.4.5",
  "scikit-learn>=1.5.0",
  "torch>=2.4.0",
  "transformers>=4.45.0",
]

[tool.setuptools.packages.find]
include = ["experiments*"]

[tool.uv]
default-groups = []
