[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hallucination-graduation-thesis-experiments"
version = "0.1.0"
description = "UV-managed experiment environment for the Corpus-Grounded Selective Fusion Detector"
readme = "experiments/README.md"
requires-python = ">=3.10,<3.14"
dependencies = []

[dependency-groups]
# 메인 트랙 B (S0 → S13') 실행에 필요한 모든 런타임 의존성.
generation = [
  "datasets>=3.0.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=17.0.0",
  "requests>=2.32.0",         # Infini-gram REST + literature fetch
  "safetensors>=0.4.5",
  "scikit-learn>=1.5.0",      # GroupKFold + LR/RF/GBM (S11')
  "scipy>=1.13.0",            # spearmanr (S12' review_ablations)
  "spacy>=3.7.0",             # en_core_web_lg NER (S8'/S9'/question_only_axis)
  "torch>=2.4.0",
  "transformers>=4.45.0",     # NLI clustering + microsoft/deberta-large-mnli
]
figures = [
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "pyarrow>=17.0.0",
]

[tool.setuptools.packages.find]
include = ["experiments*"]

[tool.uv]
default-groups = []
